EXTRA_DIST=tests/*.h
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src
ACLOCAL_AMFLAGS=-I m4

# libtoolize: You should add the contents of the following files to `aclocal.m4':
# libtoolize:   `/usr/share/aclocal/libtool.m4'
# libtoolize:   `/usr/share/aclocal/ltoptions.m4'
# libtoolize:   `/usr/share/aclocal/ltversion.m4'
# libtoolize:   `/usr/share/aclocal/ltsugar.m4'
# libtoolize:   `/usr/share/aclocal/lt~obsolete.m4'
